[gd_scene load_steps=3 format=3 uid="uid://bup0up7qgkru3"]

[ext_resource type="Texture2D" uid="uid://bx1tjxhrb4wbe" path="res://icons/other/card_back_progart.png" id="1_ncirl"]
[ext_resource type="Script" path="res://ui_elements/card_display_back.gd" id="1_vcmph"]

[node name="CardDisplayBack" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_vcmph")

[node name="border_color" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -360.0
offset_right = 220.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.0901961, 0.0901961, 1)
metadata/_edit_use_anchors_ = true

[node name="background_color" type="ColorRect" parent="border_color"]
layout_mode = 0
offset_right = 440.0
offset_bottom = 720.0
scale = Vector2(0.94, 0.96)
pivot_offset = Vector2(215, 360)
color = Color(0.466667, 0.466667, 0.466667, 1)
metadata/_edit_use_anchors_ = true

[node name="back_sprite" type="Sprite2D" parent="border_color"]
unique_name_in_owner = true
position = Vector2(220, 360)
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_ncirl")

[node name="back_bg" type="ColorRect" parent="border_color/back_sprite"]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -250.0
offset_right = -250.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.333333, 0.333333, 0.333333, 1)
metadata/_edit_use_anchors_ = true

[node name="mouse_control" type="Control" parent="."]
custom_minimum_size = Vector2(440, 720)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -360.0
offset_right = 215.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[connection signal="gui_input" from="mouse_control" to="." method="_on_mouse_control_gui_input"]
[connection signal="mouse_entered" from="mouse_control" to="." method="_on_mouse_control_mouse_entered"]
[connection signal="mouse_exited" from="mouse_control" to="." method="_on_mouse_control_mouse_exited"]
